feature(security): initialize security config with permitAll before applying JWKS ES256 verification